--- a/src/App.css
+++ b/src/App.css
@@ -41,10 +41,10 @@ h2{
     display: flex;
     flex-direction: column;
     gap: 1rem;
-    width: 800px;
+    
 }
 .buscador{
-    width: 40%;
+    width: 55%;
     height: 2.5rem;
     border-radius: 0.3em;
     border-color: rgba(0, 0, 0, 0.288);
@@ -65,4 +65,7 @@ th , td{
     font-weight: 500;
     color: #c84250;
     border: none;
+}
+.miTabla{
+    width: 100%;
 }
